--- a/trunk/.project
+++ b/trunk/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>spoken-number-recognition</name>
+	<name>AI2 - Neural Networks</name>
 	<comment></comment>
 	<projects>
 	</projects>
